Savage Wheels Release HISTORY
-----------------------------

V1.5 Release
  * changed - Game now uses FMod Ex sound library to play sound fx and music.
  * fixed crashes and game assets loading issues under 64-bit platforms.
  * fixed a minor bug that prevented browsing vehicles when starting 1 or 2-player games.

V1.4 Release
  * fixed a large number of memory leaks
  * fixed problems in showing ingame shadows when in 32 bit color mode. Might sitll be buggy on x64 systems :(
  * fixed crash on exit the game
  * fixed problem where when in windowed mode the game window was not centered
  * fixed - changing sound/music volume on fullscreen was almost impossible because of the fast gfx rendering. Now the volume changes on mouse button released
  * fixed - The F4 key to start/stop ingame music is now working
  * fixed - one of the background available was not being selected from the random map selector
  * changed - To prevent problems on Linux systems the game will start in windowed mode by default. Use F11 when playing to toggle fullscreen mode or start the game with a command line parameter '-force-fullscreen'. NOTE: Fullscreen may crash your Linux desktop. So, far problems where detected only on KDE.
  * changed - the game will now always try to go for hardware surface for better performace. If you want to run with software surfaces use the '-sw' command line parameter.
  * added support for Linux systems. The game can now be compiled and run on Linux. 
  * added - escape key now exists the game when in main menu
  * updated - Readme html document (English version only). Check the document for more Q&A info.

V1.03 Patch
  * fixed sound-conflicts that caused the game to crash under win2k and XP systems
  * changed - game now uses Fmod(c) sound engine
  * added '-hw' command line for greater video cards
 
V1.02 Patch
  * fixed a bug that caused campaigns to start from level 2  
  * fixed a bug that caused vehicles going back to do enormous damage